添加发送口令功能

--- a/app/src/main/res/xml/pref_setting.xml
+++ b/app/src/main/res/xml/pref_setting.xml
@@ -12,6 +12,11 @@
             android:key="password"
             android:title="@string/pref_password" />
 
+        <SwitchPreference
+            android:defaultValue="true"
+            android:dependency="password"
+            android:key="send_password"
+            android:title="@string/pref_send_password" />
 
         <SwitchPreference
             android:defaultValue="false"
