修复第一次安装要重新打开开关才可以用，添加金额提示

--- a/app/src/main/res/xml/pref_setting.xml
+++ b/app/src/main/res/xml/pref_setting.xml
@@ -9,6 +9,12 @@
         <SwitchPreference
             android:defaultValue="true"
             android:dependency="open"
+            android:key="amount"
+            android:title="@string/pref_amount" />
+
+        <SwitchPreference
+            android:defaultValue="true"
+            android:dependency="open"
             android:key="password"
             android:title="@string/pref_password" />
 
