添加自动回复

--- a/app/src/main/res/xml/pref_setting.xml
+++ b/app/src/main/res/xml/pref_setting.xml
@@ -24,6 +24,28 @@
             android:key="send_password"
             android:title="@string/pref_send_password" />
 
+		<SwitchPreference
+            android:defaultValue="false"
+            android:dependency="open"
+            android:key="reply"
+            android:title="@string/pref_reply" />
+		
+        <EditTextPreference
+            android:dependency="reply"
+            android:key="reply1"
+            android:title="@string/pref_reply1" />
+		
+		<SwitchPreference
+            android:defaultValue="false"
+            android:dependency="open"
+            android:key="reply2"
+            android:title="@string/pref_reply2" />
+		
+		<EditTextPreference
+            android:dependency="reply2"
+            android:key="reply3"
+            android:title="@string/pref_reply3" />
+		
         <SwitchPreference
             android:defaultValue="false"
             android:dependency="open"
