--- a/app/src/main/res/xml/pref_setting.xml
+++ b/app/src/main/res/xml/pref_setting.xml
@@ -13,39 +13,51 @@
             android:title="@string/pref_amount" />
 
         <SwitchPreference
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:dependency="open"
-            android:key="password"
-            android:title="@string/pref_password" />
-
-        <SwitchPreference
-            android:defaultValue="true"
+            android:key="we"
+            android:title="@string/pref_we" />
+            
+        <ListPreference
+            android:defaultValue="0"
             android:dependency="password"
-            android:key="send_password"
-            android:title="@string/pref_send_password" />
-
-	<SwitchPreference
-            android:defaultValue="false"
-            android:dependency="open"
-            android:key="reply"
-            android:title="@string/pref_reply" />
-		
-        <EditTextPreference
+            android:entries="@array/password"
+            android:entryValues="@array/password1"
+            android:key="password"
+            android:title="@string/password" />
+            
+        <ListPreference
+            android:defaultValue="0"
             android:dependency="reply"
-            android:key="reply1"
-            android:title="@string/pref_reply1" />
-		
-	<SwitchPreference
-            android:defaultValue="false"
+            android:entries="@array/reply"
+            android:entryValues="@array/reply1"
+            android:key="reply"
+            android:title="@string/reply" />
+            
+        <EditTextPreference
             android:dependency="open"
+            android:hint="@string/reply1_hit"
+            android:key="reply1"
+            android:title="@string/reply1" />
+            
+        <EditTextPreference
+            android:dependency="open"
+            android:hint="@string/reply2_hit"
             android:key="reply2"
-            android:title="@string/pref_reply2" />
-		
-	<EditTextPreference
-            android:dependency="reply2"
-            android:key="reply3"
-            android:title="@string/pref_reply3" />
-		
+            android:title="@string/reply2" />
+            
+        <EditTextPreference
+            android:dependency="open"
+            android:hint="@string/keywords_hit"
+            android:key="keywords"
+            android:title="@string/keywords" />
+            
+        <EditTextPreference
+            android:dependency="open"
+            android:hint="@string/group_hit"
+            android:key="group"
+            android:title="@string/group" />
+            
         <SwitchPreference
             android:defaultValue="false"
             android:dependency="open"
